# device-path-rs

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build-ovmf.sh  build.py  tags.sh
src/: main.rs
